deploy/fphi/devops/appdes1/dev/hello-kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-service
spec:
  type: ClusterIP
  selector:
    greeting: hello
    department: kubernetes
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 8080
