deploy/fphi/devops/appdes1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  namespace: app-argocd
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo
